SGWC Week 7 newsletter

--- a/spartangwc/news.html
+++ b/spartangwc/news.html
@@ -169,6 +169,188 @@
             </div> <!--/.container -->
         </section>
 
+        <!--Week 7 -->
+        <section id="week7" class="news bg-white">
+            <div class="container">
+                <div class="headline text-center">
+                    <div class="row">
+                        <div class="col-md-10 col-md-offset-1 text-center">
+                            <h2 class="section-title">Week 7</h2> <!-- begin week 7 summary -->
+                            <h4 class="section-title">Final Projects!</h4>
+                        </div>
+                    </div>
+                </div>
+                <p>
+                    We were excited to welcome back our young coders for a day of review and project work time! 
+                </p>
+                <p>
+                    Before we dive into our fun activities, here's a few announcements.
+                </p>
+                <h4 class="text-center">Announcements</h4>
+                <ul>
+                    <h4>1. GET-IT Day</h4>
+                    <p>
+                        GET-IT Day is a field trip experience designed specifically for young girls in grades 4-8 
+                        and provides a unique opportunity to learn about the latest technologies and tech concepts 
+                        in an interactive, hands-on environment. <br>
+                    </p>
+                    <p>
+                        With MCWT providing transportation and all necessary materials, students can focus on 
+                        exploring the expo area and participating in engaging activities!
+                        This event will be held on May 16, 2023. 
+                    </p>
+                    <p>
+                        <a href="https://mcwt.org/programs/list/K-12-Initiatives/GIRLS-GET-IT-DAY">Learn more and register here</a>
+                    </p>
+                    <h4>2. MCWT Camp Infinity</h4>
+                    <p>
+                        Coming to a city near you, girls in grades 5-12 are invited to join Camp Infinity and 
+                        discover the exciting world of technology! 
+                        This series of weeklong sessions will introduce the girls to computer and 
+                        internet technologies through hands-on activities.
+                    </p>
+                    <p>
+                        Each week of fun is held on Mondays-Fridays from 8:30 a.m. to 4 p.m. in various 
+                        locations throughout the state. 
+                        The girls will create websites with HTML/CSS, program Ozobot Evo and/or Finch 2.0 robots, 
+                        and learn game design using Epic Games Unreal Engine. 
+                        Expert instructors will guide the students through a range of engaging activities 
+                        that will spark their imagination and creativity.
+                    </p>
+                    <p>
+                        <a href="https://mcwt.org/programs/list/K-12-Initiatives/CAMP-INFINITY">Learn more and register here</a>
+                    </p>
+                    <h4>3. Bonus Hour</h4>
+                    <p>
+                        Join us for "bonus hour" every <b>Thursday from 6:00-7:00p ET</b> open to all SGWC
+                        participants. SGWC mentors will be available on Zoom during the bonus hour
+                        to resolve technical difficulties, dive deeper into the coding concepts we've learned,
+                        or to talk about computer science in general!
+                    </p>
+                    <p>
+                        Use the Zoom link below to join us for a bonus hour of fun each week.
+                        The password for our bonus hour was sent in the welcome email.
+                    </p>
+                    <ul>
+                        <li style="list-style: disc"><b>Zoom Link:</b> <a href="https://msu.zoom.us/j/94658238348">https://msu.zoom.us/j/94658238348</a> (password is provided in the welcome email)</li>
+                    </ul>
+                    <h4>4. Looking Ahead</h4>
+                    <p>
+                        We will <b>not be meeting this week on 3/25</b>. 
+                        We'll see you again on <b>Saturday, 4/1 at 10a ET</b> for our seventh SGWC meeting of the spring,
+                        where we will be working further on exciting final projects!
+                    </p>
+                    <h4>5. Questions?</h4>
+                    <p>
+                        As always, please reach out with any questions / concerns / ideas / feedback to <a href="mailto:info@spartangwc.org">info@spartangwc.org</a>.
+                    </p>
+                </ul>
+                <h4 class="text-center">Meeting Recap</h4>
+                <p>
+                    This week we started off with a game of kahoot to review what we have learned so far.
+                </p>
+                <p>
+                    After our icebreaker, we had our spotlight and watched a video about Reshma Saujani, the founder of Girls Who Code.
+                </p>
+                <div align="middle" class="col-md-12" style="padding-top: 2em; padding-bottom: 2em">
+                    <div class="row">
+                        <div class="col-md-12" align="middle">
+                            <iframe width="400" height="225" src="https://player.pbs.org/viralplayer/3075900976/" frameborder="0" marginwidth="0" marginheight="0" scrolling="no" seamless allowfullscreen></iframe>
+                            <p><i>Meet Reshma Saujani, the founder of Girls Who Code</i></p>
+                        </div>
+                    </div>
+                </div>
+                <p>
+                    We reviewed one of our previous lessons on copyright. 
+                    Then, we jumped into coding time, to allow our coders to work on their final projects.
+                </p>
+                <p>
+                    Finally, we ended the day with our standup and reflected on 
+                    what we learned about and what challenged us.
+                </p>
+                <h4 class="text-center">Mentor Spotlight</h4>
+                <p>
+                    SGWC is led, organized, and run by MSU students with the help of <a href="https://www.egr.msu.edu/people/profile/iselava1">Teresa Isela Vandersloot</a> and
+                    <a href="https://www.egr.msu.edu/people/profile/ldillon">Dr. Laura Dillon </a>,
+                    and we thought it would be fun to
+                    introduce a few of our <a href="contact.html#team">team members</a> each week.
+                </p>
+                <p>
+                    To continue our mentor spotlight series, we'd like to introduce some Spring 2023 Virtual Mentors!
+                </p>
+
+                <!-- mentor photos -->
+                <div align="middle" class="col-md-12" style="padding-top: 2em; padding-bottom: 2em">
+                    <div class="row">
+                        <div class="col-md-6" align="middle">
+                            <img class="shadow-lg" src="assets/img/ss23photos/team/ShawnMondol.jpg" height="350">
+                            <br><br>
+                            <p><i>Shawn Mondol</i></p>
+                        </div>
+                        <div class="col-md-6" align="middle">
+                            <img class="shadow-lg" src="assets/img/ss23photos/team/SanjuKona.jpeg" height="350">
+                            <br><br>
+                            <p><i>Sanju Kona</i></p>
+                        </div>
+                    </div>
+                    
+                    <div class="row">
+                        <!-- mentor QA -->
+                        <div class="col-md-6" align="center"> <!-- Shawn -->
+                            <p>
+                                <b>What are you studying?</b><br>
+                                I am a third-year majoring in Computer Science!
+                            </p>
+                            <p>
+                                <b>How did you become interested in computer science?</b><br>
+                                I've been around computers all my life!
+                            </p>
+                            <p>
+                                <b>What's something cool you've done with computer science?</b><br>
+                                I've made a game that other people say they enjoyed playing.
+                            </p>
+                            <p>
+                                <b>What are you hoping to do with computer science in the future?</b><br>
+                                I want to create more programs for personal use.
+                            </p>
+                            <p>
+                                <b>What advice do you have for our students?</b><br>
+                                Keep exploring anything that interests you.
+                            </p>
+                        </div>
+                        <div class="col-md-6" align="center"> <!-- Sanju -->
+                            <p>
+                                <b>What are you studying?</b><br>
+                                I am a second-year majoring in Computer Science!
+                            </p>
+                            <p>
+                                <b>How did you become interested in computer science?</b><br>
+                                I took a CS class in high school and it was so fun!
+                            </p>
+                            <p>
+                                <b>What's something cool you've done with computer science?</b><br>
+                                In the past I helped make a website that changed the displays on microwaves!
+                            </p>
+                            <p>
+                                <b>What are you hoping to do with computer science in the future?</b><br>
+                                I'm hoping to enter the world of healthcare technology :)
+                            </p>
+                            <p>
+                                <b>What advice do you have for our students?</b><br>
+                                My advice is to keep pushing even when things seem daunting, you can do more than you think!!
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <p>
+                    Thanks for making last Saturday a blast, everyone. We can't wait to see you in less than two weeks!
+                </p>
+                <p>
+                    -The SGWC Team
+                </p>
+            </div>
+        </section> <!-- end week 7 summary -->
+
 
         <!--Week 6 -->
         <section id="week6" class="news bg-white">
@@ -289,12 +471,12 @@
                 <!-- mentor photos -->
                 <div align="middle" class="col-md-12" style="padding-top: 2em; padding-bottom: 2em">
                     <div class="row">
-                        <div class="col-md-4" align="middle">
+                        <div class="col-md-6" align="middle">
                             <img class="shadow-lg" src="assets/img/ss23photos/team/EunhyePark.jpg" height="350">
                             <br><br>
                             <p><i>Grace Park</i></p>
                         </div>
-                        <div class="col-md-4" align="middle">
+                        <div class="col-md-6" align="middle">
                             <img class="shadow-lg" src="assets/img/ss23photos/team/IpekBayik.jpg" height="350">
                             <br><br>
                             <p><i>Ipek Bayik</i></p>
@@ -303,7 +485,7 @@
                     
                     <div class="row">
                         <!-- mentor QA -->
-                        <div class="col-md-4" align="left"> <!-- Grace -->
+                        <div class="col-md-6" align="center"> <!-- Grace -->
                             <p>
                                 <b>What are you studying?</b><br>
                                 I am a third-year majoring in Computer Science!
@@ -327,7 +509,7 @@
                                 Don't be afraid to fail and make mistakes :&rpar; 
                             </p>
                         </div>
-                        <div class="col-md-4" align="left"> <!-- Ipek -->
+                        <div class="col-md-6" align="center"> <!-- Ipek -->
                             <p>
                                 <b>What are you studying?</b><br>
                                 I am a first-year majoring in Computer Science!
@@ -1163,7 +1345,7 @@
                     </div>
                     <!-- mentor QA -->
                     <div class="row">
-                        <div class="col-md-6" align="left"> <!-- Tatiana -->
+                        <div class="col-md-6" align="center"> <!-- Tatiana -->
                             <p>
                                 <b>What are you studying?</b><br>
                                 I am a third-year double majoring in Computer Science and Information Science!
@@ -1185,7 +1367,7 @@
                                 Don't be afraid to try something new; even if you don't succeed you can learn a lot!
                             </p>
                         </div>
-                        <div class="col-md-6" align="left"> <!-- Judy -->
+                        <div class="col-md-6" align="center"> <!-- Judy -->
                             <p>
                                 <b>What are you studying?</b><br>
                                 I am a fourth-year majoring in Computer Science with a minor in Spanish!
