--- a/belizeweb/SS2023/news.html
+++ b/belizeweb/SS2023/news.html
@@ -199,15 +199,15 @@
 												</p>
 												<p>
 													<b>How did you become interested in computer science?</b><br>
-													Cyberpunk movies led me to love computer science.
+													I saw a simple python code. 
 												</p>
 												<p>
 													<b>What's something cool you've done with computer science?</b><br>
-													I recreated one of my favorite games, Pac-Man.
+													WIE Outreach 
 												</p>
 												<p>
 													<b>What are you hoping to do with computer science in the future?</b><br>
-													I am hoping to create an advanced data collection system for better decision-making.
+													Software Engineering/Cybersecurity.
 												</p>
 											</div>
 											<div class="col-md-6" align="left"> <!-- Emily -->
