--- a/technovation/Fall2023/index.html
+++ b/technovation/Fall2023/index.html
@@ -223,10 +223,10 @@
                 <section class="bg-white">
                   <div class="container">
                         <div class="row">
-                            <h2 class="text-center"><b>FALL 2022</b></h2>
+                            <h2 class="text-center"><b>FALL 2023</b></h2>
                             
                             <p class="text-center">
-                                <a href="https://docs.google.com/forms/d/e/1FAIpQLSemd3jH_8Tndqd9mcGJu3JRYbeKDUoxvbx0zLVSesIWxExL0Q/viewform" target="_blank">
+                                <a href="https://docs.google.com/forms/d/e/1FAIpQLSc42KtHJJNfSgUuFNSB-4LlbXhgIdCmvAzruGIPGFDmikZSgw/viewform?usp=sf_link" target="_blank">
                                   Submit this Google Form</a> to register your interest today!
                               </p>
                             <!-- 
@@ -253,13 +253,13 @@
 
                             <p class="text-center">
                                 We're excited to
-                                be back in person at the Downtown Branch of the Capital Area District Libraries (401 South Capitol Avenue) and to also offer a remote option for those not in the Greater Lansing Area.
+                                be back in person at the Foster Labs in the Foster Community Center and to also offer a remote option for those not in the Greater Lansing Area.
                             </p>
                             <p class="text-center">
                                 Class content will be the same in both programs, but the structure may vary.
                             </p>
                             <p class="text-center">
-                                Weekly meetings: Saturdays, Sept. 24&minus;Nov. 19 &bullet; 10:30 a.m.&minus;12 a.m.
+                                Weekly meetings: Saturdays, October 7&minus;December 2 &bullet; 10 a.m.&minus;12 p.m.
                             </p>
                             <p class="text-center">
                                 MSU mentors will also offer a weekly evening Bonus Hour by Zoom at a time TBD.
@@ -297,8 +297,8 @@
                             <h2 class="text-center"><b>Attendance</b></h2>
                             <p class="text-center">
                                 By registering, you are committing
-                                to attend the entire nine-lesson series.
-                                Coders who attend at least seven of the nine Saturday meetings and complete a project will receive a Certificate of Completion and are eligible for small prizes.
+                                to attend the entire eight-lesson series.
+                                Coders who attend at least seven of the eight Saturday meetings and complete a project will receive a Certificate of Completion and are eligible for small prizes.
                             </p>
                             <p class="text-center">
                                 In the event that a meeting is cancelled (due to instructor
@@ -322,7 +322,7 @@
                         <div class="row">
                             <p class="text-center">
                                 Open to all in Grades 6-12.
-                                Register by September 3
+                                Register by September 15
                                 to receive full consideration for a seat.
                                 If the number of registrations exceeds capacity,
                                 we will prioritize students who have had fewer
@@ -330,15 +330,15 @@
                                 that does not offer programming courses, or belong
                                 to a group that is underrepresented in computing.
                                 Notifications of acceptance will be sent no later than Friday,
-                                September 10th, and will include instructions for
+                                September 22nd, and will include instructions for
                                 completing registration. Students not accepted in the
                                 first round will be placed on a waiting list, and
                                 will be offered the opportunity to register if students
                                 accepted in the first round do not complete their
-                                registration by September 17.
+                                registration by September 29th.
                               </p>
                               <p class="text-center">
-                                <a href="https://docs.google.com/forms/d/e/1FAIpQLSemd3jH_8Tndqd9mcGJu3JRYbeKDUoxvbx0zLVSesIWxExL0Q/viewform" target="_blank">
+                                <a href="https://docs.google.com/forms/d/e/1FAIpQLSc42KtHJJNfSgUuFNSB-4LlbXhgIdCmvAzruGIPGFDmikZSgw/viewform?usp=sf_link" target="_blank">
                                   Submit this Google Form</a> to register your interest today!
                               </p>
                         </div> <!-- /.row -->
