Changes index.html Fall2024

--- a/technovation/Fall2024/index.html
+++ b/technovation/Fall2024/index.html
@@ -165,9 +165,9 @@
                                         <a href="contact.html#location">Location</a>
                                     </li>
                                 </ul>
-                           </li>
+                           </li>-->
                         </ul>
-                    </div>--> <!-- nav links -->
+                    </div> <!-- nav links -->
 
                 </div><!-- /.container -->
             </nav>
