--- a/technovation/Fall2024/index.html
+++ b/technovation/Fall2024/index.html
@@ -342,7 +342,7 @@
                                   Submit this Form</a> to register your interest today!
                               </p>
                               <div class="application-instructions">
-                                <h2>Application Process for Women in Engineering</h2>
+                                <h3 class="text-center"><b>Registration Instructions</b></h3>
                                 
                                 <ol>
                                   <li>
