change registration date

--- a/technovation/Fall2024/index.html
+++ b/technovation/Fall2024/index.html
@@ -252,15 +252,14 @@
                             <p class="text-center">
                                 We're excited to
                                 be back in person at the Downtown Lansing Branch of Capital Area District Libraries 
-                                (<a href="https://goo.gl/maps/gayXdux32vt1Yiqb6">
-                                    401 South Capitol Avenue, Lansing, MI 48933</a>).
+                                (<a href="https://goo.gl/maps/gayXdux32vt1Yiqb6">401 South Capitol Avenue, Lansing, MI 48933</a>).
                             </p>
                             <!--<p class="text-center">
                                 Class content will be the same in both programs, but the structure may vary.-->
                             </p>
                             <p class="text-center">
-                                Weekly meetings: Saturdays, September 28&minus;November 23 &bullet; 10 a.m.&minus;12 p.m.
-                                (no meeting on October 19).
+                                Weekly meetings: Saturdays, September 28th&minus;November 23th &bullet; 10 a.m.&minus;12 p.m.
+                                (no meeting on October 19th).
                             </p>
                             <p class="text-center">
                                 MSU mentors will also offer a weekly evening Bonus Hour by Zoom at a time TBD.
@@ -299,15 +298,15 @@
                         <div class="row">
                             <p class="text-center">
                                 Open to all in Grades 6-12.
-                                Register by September 15
+                                Register by September 20th
                                 to receive full consideration for a seat.
                                 If the number of registrations exceeds capacity,
                                 we will prioritize students who have had fewer
                                 experiences with coding, come from a school district
                                 that does not offer programming courses, or belong
                                 to a group that is underrepresented in computing.
-                                Notifications of acceptance will be sent no later than Friday,
-                                September 22nd, and will include instructions for
+                                Notifications of acceptance will be sent no later than Wednesday,
+                                September 25th, and will include instructions for
                                 completing registration. <!-- Students not accepted in the
                                 first round will be placed on a waiting list, and
                                 will be offered the opportunity to register if students
