--- a/technovation/Fall2024/index.html
+++ b/technovation/Fall2024/index.html
@@ -306,7 +306,7 @@
                                 that does not offer programming courses, or belong
                                 to a group that is underrepresented in computing.
                                 Notifications of acceptance will be sent no later than Wednesday,
-                                September 25th, and will include instructions for
+                                September 22nd, and will include instructions for
                                 completing registration. <!-- Students not accepted in the
                                 first round will be placed on a waiting list, and
                                 will be offered the opportunity to register if students
