change registration deadline

--- a/technovation/Fall2024/index.html
+++ b/technovation/Fall2024/index.html
@@ -298,16 +298,16 @@
                         <div class="row">
                             <p class="text-center">
                                 Open to all in Grades 6-12.
-                                Register by September 20th
+                                Register by September 25th (5 p.m)
                                 to receive full consideration for a seat.
                                 If the number of registrations exceeds capacity,
                                 we will prioritize students who have had fewer
                                 experiences with coding, come from a school district
                                 that does not offer programming courses, or belong
                                 to a group that is underrepresented in computing.
-                                Notifications of acceptance will be sent no later than Wednesday,
+                                <!--Notifications of acceptance will be sent no later than Wednesday,
                                 September 22nd, and will include instructions for
-                                completing registration. <!-- Students not accepted in the
+                                completing registration.  Students not accepted in the
                                 first round will be placed on a waiting list, and
                                 will be offered the opportunity to register if students
                                 accepted in the first round do not complete their
