add newsletter week 1 2

--- a/technovation/Fall2024/index.html
+++ b/technovation/Fall2024/index.html
@@ -101,7 +101,7 @@
                     <!-- nav links -->
                     <div class="collapse navbar-collapse" id="main-nav-collapse">
                         <ul class="nav navbar-nav navbar-right text-uppercase">
-                          <!-- uncomment when setting up the repo for a new Technovation -->
+                          <!-- uncomment when setting up the repo for a new Technovation
                           <li>
                               <a class="dropdown-toggle" data-toggle="dropdown"><span>Home</span></a>
                               <ul class="dropdown-menu">
@@ -112,9 +112,9 @@
                                       <a href="index.html">Home</a>
                                   </li>
                               </ul>
-                          </li>
+                          </li>-->
                           <!-- comment out when setting up the repo for a new Technovation -->
-                          <!--<li>
+                          <li>
                             <a href="index.html">Home</a>
                           </li>
 
@@ -165,7 +165,7 @@
                                         <a href="contact.html#location">Location</a>
                                     </li>
                                 </ul>
-                           </li>-->
+                           </li>
                         </ul>
                     </div> <!-- nav links -->
 
